Closed
Bug 364831
Opened 19 years ago
Closed 19 years ago
Firefox fails to build when using the Windows Vista SDK
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: craig.hawco, Unassigned)
Details
Attachments
(1 file)
|
730 bytes,
patch
|
neil
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a2pre) Gecko/20061223 Firefox/3.0a2pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a2pre) Gecko/20061223 Firefox/3.0a2pre
widget/src/windows/nsKeyboardLayout.cpp fails to compile when using the Windows Vista SDK. Apparently winable.h has been removed, and the declarations moved into winuser.h.
Reproducible: Always
| Reporter | ||
Comment 1•19 years ago
|
||
Include winuser.h, then check if we've picked up the WINABLEAPI define. If not, we must be using an older SDK and include winable.h.
Comment 2•19 years ago
|
||
Craig: please ask for review from one of the owner/peers listed at http://www.mozilla.org/owners.html#win32-based-gfx-and-widget by using "Edit Attachment", setting the review dropdown to "?" and entering their email address in the textbox.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Product: Firefox → Core
QA Contact: general → general
Version: unspecified → Trunk
Updated•19 years ago
|
Assignee: nobody → win32
Component: General → Widget: Win32
QA Contact: general → ian
| Reporter | ||
Updated•19 years ago
|
Attachment #249525 -
Flags: review?(neil)
Comment 3•19 years ago
|
||
Comment on attachment 249525 [details] [diff] [review]
Proposed patch
I see the MSDN online documentation has already been updated with the new include, although I'm not about to download the Vista SDK to try this out.
Attachment #249525 -
Flags: review?(neil) → review+
Comment 4•19 years ago
|
||
Fixed on trunk.
/mozilla/widget/src/windows/nsKeyboardLayout.cpp 3.9
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•