Bug 364831: Fix Firefox build w/Vista SDK. Patch by craig.hawko@gmail.com r=neil